--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Peng Cheng</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Peng Cheng" name="description">
+  <meta content="Peng Cheng" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/p9.jpg" rel="icon">
@@ -463,48 +463,48 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <h4><a href="cfd-details.html" target="_blank">High-Resolution Computational Fluid Dynamics Model</a></h4>
+            <p>Multiphase multiscale model for rain-wind-induced vibration simulations</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <h4><a href="predictive-model.html" target="_blank">Convolutional Neural Network (CNN) with CFD</a></h4>
+            <p>Prediction model of velocity field with CNN Artchitecture based on pressure</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <h4><a href="computer-vision.html" target="_blank">Computer-Vision based Big-Data Analysis</a></h4>
+            <p> Pattern Recognition of Experimental Rainwater morphology Evolution Analysis</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <h4><a href="">Time Seizes Analysis</a></h4>
+            <p> COVID-19 Daily Preidction in Quebec</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <h4><a href="">Object Detection</a></h4>
+            <p>Real-Time Mask Detection during the pedemeic</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <h4><a href="">Natrual Language Process</a></h4>
+            <p> Translation </p>
           </div>
         </div>
 
@@ -518,8 +518,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Portfolio</h2>
-        <p>My Works</p>
+        <h2>Discussions</h2>
+        <p> Highlights</p>
       </div>
 
       <div class="row">
